<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ritsFragmentFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.RitsFragment">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_A"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageRits"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@color/PrimaryDark"
            android:contentDescription="@string/imageRits"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/place_holder" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/widthStretch"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/PrimaryDark"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.566">

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="101dp"
            android:background="@color/PrimaryLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageRits">

            <TextView
                android:id="@+id/groupChannel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/NTC"
                android:textColor="@color/PrimaryText"
                android:textSize="@dimen/fontSize_normal_GP"
                app:layout_constraintEnd_toStartOf="@+id/dataChannel7"
                app:layout_constraintHorizontal_bias="0.558"
                app:layout_constraintStart_toEndOf="@+id/dataChannel5"
                app:layout_constraintTop_toTopOf="@+id/groupChannel1" />

            <TextView
                android:id="@+id/groupChannel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/NTC"
                android:textColor="@color/PrimaryText"
                android:textSize="@dimen/fontSize_normal_GP"
                app:layout_constraintEnd_toStartOf="@+id/dataChannel3"
                app:layout_constraintHorizontal_bias="0.532"
                app:layout_constraintStart_toEndOf="@+id/dataChannel1"
                app:layout_constraintTop_toBottomOf="@+id/dataChannel2" />

            <TextView
                android:id="@+id/dataChannel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/NTC"
                android:textColor="@color/PrimaryText"
                android:textSize="@dimen/fontSize_normal_CH"
                app:layout_constraintEnd_toStartOf="@+id/dataChannel2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dataChannel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NTC"
                android:textColor="@color/PrimaryText"
                android:textSize="@dimen/fontSize_normal_CH"
                app:layout_constraintEnd_toStartOf="@+id/dataChannel3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dataChannel1"
                app:layout_constraintTop_toTopOf="@+id/dataChannel1" />

            <TextView
                android:id="@+id/dataChannel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/NTC"
                android:textColor="@color/PrimaryText"
                android:textSize="@dimen/fontSize_normal_CH"
                app:layout_constraintEnd_toStartOf="@+id/dataChannel4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dataChannel2"
                app:layout_constraintTop_toTopOf="@+id/dataChannel2" />

            <TextView
                android:id="@+id/dataChannel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NTC"
                android:textColor="@color/PrimaryText"
                android:textSize="@dimen/fontSize_normal_CH"
                app:layout_constraintEnd_toStartOf="@+id/dataChannel5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dataChannel3"
                app:layout_constraintTop_toTopOf="@+id/dataChannel3" />

            <TextView
                android:id="@+id/dataChannel5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NTC"
                android:textColor="@color/PrimaryText"
                android:textSize="@dimen/fontSize_normal_CH"
                app:layout_constraintEnd_toStartOf="@+id/dataChannel6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dataChannel4"
                app:layout_constraintTop_toTopOf="@+id/dataChannel4" />

            <TextView
                android:id="@+id/dataChannel6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NTC"
                android:textColor="@color/PrimaryText"
                android:textSize="@dimen/fontSize_normal_CH"
                app:layout_constraintEnd_toStartOf="@+id/dataChannel7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dataChannel5"
                app:layout_constraintTop_toTopOf="@+id/dataChannel5" />

            <TextView
                android:id="@+id/dataChannel7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/NTC"
                android:textColor="@color/PrimaryText"
                android:textSize="@dimen/fontSize_normal_CH"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dataChannel6"
                app:layout_constraintTop_toTopOf="@+id/dataChannel6" />

            <TextView
                android:id="@+id/dataTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/NTC"
                android:textColor="@color/PrimaryText"
                android:textSize="@dimen/fontSize_normal_TT"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dataChannel4" />

            <TextView
                android:id="@+id/dataBlank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/PrimaryText"
                android:textSize="@dimen/fontSize_normal_TT"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dataChannel4" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:background="@color/PrimaryDark"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/positionChannel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/ch1"
                android:textColor="@color/PrimaryText"
                app:layout_constraintEnd_toStartOf="@+id/positionChannel2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/positionChannel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/ch2"
                android:textColor="@color/PrimaryText"
                app:layout_constraintEnd_toStartOf="@+id/positionChannel3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/positionChannel1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/positionChannel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/ch3"
                android:textColor="@color/PrimaryText"
                app:layout_constraintEnd_toStartOf="@+id/positionChannel4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/positionChannel2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/positionChannel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/ch4"
                android:textColor="@color/PrimaryText"
                app:layout_constraintEnd_toStartOf="@+id/infoGroup"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/positionChannel3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/infoFleet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:text="@string/Fleet"
                android:textColor="@color/PrimaryText"
                app:layout_constraintStart_toEndOf="@+id/infoDriver"
                app:layout_constraintTop_toBottomOf="@+id/positionChannel2" />

            <TextView
                android:id="@+id/infoDriver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:text="@string/Driver"
                android:textColor="@color/PrimaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/positionChannel1" />

            <TextView
                android:id="@+id/infoTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/total"
                android:textColor="@color/PrimaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/infoGroup"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/infoGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/group"
                android:textColor="@color/PrimaryText"
                app:layout_constraintEnd_toStartOf="@+id/infoTotal"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/positionChannel4"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <ProgressBar
            android:id="@+id/heartBeat"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_above="@+id/wifiList"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="16dp"
            android:indeterminate="true"
            android:indeterminateTint="@android:color/holo_red_dark"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
