<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.CustomiseFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/customConnectMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="connect mode"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customMenuMode" />

            <TextView
                android:id="@+id/customFavouriteMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="favourite mode"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customConnectMode" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_custom_fragment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/customMenuMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="menu mode"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/PrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- TODO: Update blank fragment layout -->


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="63dp"
                android:background="@color/PrimaryDark"
                android:src="@drawable/silodec_p"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/heartBeat"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_above="@+id/wifiList"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"

                android:layout_marginTop="16dp"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/customise_dialog"
                android:textColor="@color/PrimaryText"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />


            <Button
                android:id="@+id/button_ok"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/PrimaryLight"
                android:text="@string/custom_btn_ok"
                android:textColor="@color/PrimaryText"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_customize_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/PrimaryLight"
                android:text="@string/menu_custom"
                android:textColor="@color/PrimaryText"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/button_cancel"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="@+id/button_cancel" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="47dp"
                android:layout_marginTop="8dp"
                android:background="@color/PrimaryLight"
                android:text="@string/custom_btn_cancel"
                android:textColor="@color/PrimaryText"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_customize_link"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_below="@+id/imageView3"
                android:paddingBottom="55dp">

                <WebView
                    android:id="@+id/customise_webview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </ScrollView>


        </android.support.constraint.ConstraintLayout>



        <android.support.constraint.ConstraintLayout
            android:id="@+id/widthStretch"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



        </android.support.constraint.ConstraintLayout>



    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
